RESOLVED FIXED30611
Fix the crash when a node not in a document receives dispatchEvent.
https://bugs.webkit.org/show_bug.cgi?id=30611
Summary Fix the crash when a node not in a document receives dispatchEvent.
Dmitry Titov
Reported 2009-10-20 17:36:06 PDT
The node that doesn't have a document (easy to repro with documentType node which is just created) crashes while trying to dispatchEvent. FireFox in similar scenario simply treats dispatchEvent() as noop. We should do the same. Patch is coming.
Attachments
Proposed patch. (3.59 KB, patch)
2009-10-20 17:52 PDT, Dmitry Titov
darin: review+
dimich: commit-queue-
Dmitry Titov
Comment 1 2009-10-20 17:52:55 PDT
Created attachment 41539 [details] Proposed patch.
Darin Adler
Comment 2 2009-10-20 23:53:47 PDT
Comment on attachment 41539 [details] Proposed patch. r=me
Dmitry Titov
Comment 3 2009-10-21 11:35:08 PDT
Note You need to log in before you can comment on or make changes to this bug.