Fix the crash when a node not in a document receives dispatchEvent. https://bugs.webkit.org/show_bug.cgi?id=30611

Reviewed by Darin Adler.

WebCore:

Test: fast/events/dispatch-event-no-document.html

* dom/EventTarget.cpp: Check for scriptExecutionContext() at the moment of dispatchEvent; do nothing if no context.
(WebCore::EventTarget::dispatchEvent):

LayoutTests:

* fast/events/dispatch-event-no-document-expected.txt: Added.
* fast/events/dispatch-event-no-document.html: Added.

Canonical link: https://commits.webkit.org/41365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49911 268f45cc-cd09-0410-ab3c-d52691b4dbfc